# Design-Pattern-Practicals

./: Practical Assignment 2.docx
Practical 1/: CMakeLists.txt  Memento Pattern P1.vpp  Memento Pattern P1.vpp.bak_000f  Memento Pattern P1.vpp.bak_001d  Memento Pattern P1.vpp.bak_002d  Memento Pattern P1.vpp.bak_003d  Memento Pattern P1.vpp.bak_004d  Memento Pattern P1.vpp.bak_005d  Memento Pattern P1.vpp.bak_006d  Memento Pattern P1.vpp.bak_007d  Memento Pattern P1.vpp.bak_008d
Practical 1/Task 1/: 21549967_P1T1.docx
Practical 1/Task 2/: main.h
Practical 1/Task 6/: AuditableSnapshot.cpp  AuditableSnapshot.h  CMakeLists.txt  Snapshot.cpp  Snapshot.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp  makefile
Practical 2/: CMakeLists.txt  Cannibal.cpp  Cannibal.h  CannibalFactory.cpp  CannibalFactory.h  Enemy.cpp  Enemy.h  EnemyFactory.h  Gorilla.cpp  Gorilla.h  GorillaFactory.cpp  GorillaFactory.h  Jaguar.cpp  Jaguar.h  JaguarFactory.cpp  JaguarFactory.h  Main  Snake.cpp  Snake.h  SnakeFactory.cpp  SnakeFactory.h  Soldier.cpp  Soldier.h  SquadMember.cpp  SquadMember.h  main.cpp  makefile
Practical 3/: Keelan Matthews 21549697.docx
Practical 3/Section A/: AeratedChocolate.cpp  AeratedChocolate.h  Aero.h  CMakeLists.txt  Cadbury.h  Chocolate.cpp  Chocolate.h  Confectionary.cpp  Confectionary.h  ConfectionaryFactory.h  DairyMilk.h  DairyMilkBubbly.h  Decorator.h  Discount.cpp  Discount.h  Flower.h  Hamper.cpp  Hamper.h  Lindor.h  Lindt.cpp  Lindt.h  Main.cpp  MilkyBar.h  MothersDiscount.cpp  MothersDiscount.h  Note.cpp  Note.h  SpringDiscount.cpp  SpringDiscount.h  ValentinesDiscount.cpp  ValentinesDiscount.h  makefile
Practical 3/Section B IDE/: AgileBattleState.h  AttackPlayStyle.h  BattleState.h  CMakeLists.txt  Main  Main.cpp  NormalBattleState.h  Pokemon.h  RunPlayStyle.cpp  StrongBattleState.cpp
UML/: practical-2.vpp  practical-2.vpp.bak_000f  practical-2.vpp.bak_001d  practical-2.vpp.bak_002d
(+96 files in other folders)
